backend/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: modernapi
  labels:
    app.kubernetes.io/name: modernapi
    app.kubernetes.io/version: "1.0.0"
